results/SVCOMP/4-shot/log-exceptions7-2024_03_18_16_09_13.txt
class A extends RuntimeException {}

class B extends A {}

class C extends B {}

class exceptions7 {
  //@ requires true;
  //@ ensures exc instanceof A;
  public static void main(String[] args) {
    try {
      try {
        C c = new C();
        A a = new A();
        throw a;
      } catch (C exc) {
        assert false;
      } catch (B exc) {
        assert false;
      }
    } catch (A exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions7.java:9: error: cannot find symbol
  //@ ensures exc instanceof A;
              ^
  symbol:   variable exc
  location: class exceptions7
1 error

